# vigil-mcp

./: .gitignore  Makefile  README.md  SKILL.md  pyproject.toml
.kiro/specs/liquidity-lock-scanner/: .config.kiro  design.md  requirements.md
.kiro/specs/public-stats/: requirements.md
articles/: vigil-full-article.txt  vigil-integrations.md  vigil-launch.md  vigil-shipped-this-weekend-XARTICLE.txt  vigil-shipped-this-weekend.md  vigil-tweet-drafts.md  vigil-x-shipped-today.md  x402-setup-checklist.md
config/: claude_desktop.json  cursor.json  hermes_mcp.yaml
contracts/: VigilStaking.sol  VigilToken.sol
deploy/: vigil-bot.service  vigil-sentinel.service
references/: api-reference.md  bankr-integration.md  contracts.md  tokenomics.md  x-content.md  x-merged-tweets.md
scripts/: make_demo.py  make_demo_aeon.py  make_demo_bot.py  make_demo_clone.py  make_demo_discovery.py  make_demo_feed.py  make_demo_full.py  make_demo_holders.py  make_demo_pay.py  make_demo_radar.py  make_demo_scan.py  make_demo_simulate.py  make_demo_x402.py  setup_bot_profile.sh  vigil-approvals.sh  vigil-batch-revoke.sh  vigil-deployer.sh  vigil-honeypot.sh  vigil-market.sh  vigil-report-scam.sh  vigil-report.sh  vigil-revoke.sh  vigil-score.sh  vigil-token.sh  vigil_check_attribution.py  x402_pay_client.py
src/vigil_mcp/: __init__.py  feed.py  server.py
src/vigil_mcp/autonomous/: bot.py  sentinel.py  telegram.py
src/vigil_mcp/bridge/: __init__.py  base_mcp.py
src/vigil_mcp/monitors/: wallet_monitor.py
src/vigil_mcp/payments/: attribution.py  client.py  x402.py
src/vigil_mcp/revoker/: __init__.py  engine.py
src/vigil_mcp/scanners/: __init__.py  approval_simulator.py  approvals.py  clone_detector.py  consensus.py  deployer.py  goplus.py  holder_concentration.py  honeypot.py  (+9 more)
templates/clawhub-vigil/: SKILL.md  aeon.yml
tests/: test_attribution.py  test_bot.py  test_consensus.py  test_holder_concentration.py  test_payment_client.py  test_revoker_bridge.py  test_scanners.py  test_server_guards.py  test_vigil.py  test_x402_client.py
website/: demo.html  feed.html  index.html  logo.html  scan.html  widget.html
x402-cloud/: .gitignore  README.md  bankr.x402.json
(+12 files in other folders)
