[project]
name = "vigil-mcp"
version = "0.1.0"
description = "VIGIL — Onchain security scanner MCP server for Base"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VIGIL Team"}
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "eth-abi>=5.0.0",
    "eth-account>=0.10.0",
    "eth-utils>=5.0.0",
    # PyJWT + cryptography are used to sign the CDP facilitator Bearer JWT
    # (EdDSA/Ed25519). cryptography is already pulled in transitively by
    # eth-account; pinned here explicitly because x402 settlement depends on it.
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[project.scripts]
vigil-mcp = "vigil_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
